# SniperNet

./: .gitignore  CMakeLists.txt  README.md
algo/: frame.py  util.py
cfg/: cfg.json  config_doc.md
inc/: frame.h  util.h  visualize.h
src/: animator.cpp  cuda_test.ipynb  data_parser.py  data_peek.ipynb  frame.cpp  frame_tester.cpp  grid_kernel.cu  main.cpp  test.py  train.ipynb  train.py  util.cpp  visualize.cpp
src/config/: kitti_config.py  train_config.py  waymo_config.py
src/data_process/: feature_map.py  kitti_config.py  kitti_data_utils.py  kitti_dataloader.py  kitti_dataset.py  transformation.py  waymo_data_util.py  waymo_dataloader.py  waymo_dataset.py
src/losses/: loss_yolo.py  losses_focal.py
src/models/: BEVtransformer.py  fpn_resnet.py  model_utils.py  resnet.py  z_resnet.py  z_yolo.py
src/util/: timing.py
src/utils/: logger.py  misc.py  torch_utils.py  train_utils.py
